Added Functionality and using Openhab namespace
Added functionality and changed namespace to match Openhab